# file_download

./: Cargo.toml  LICENSE  README.md
src/: iter_chunck.rs  iter_chunk.rs  lib.rs
src/curl_async/: http11.rs  http2.rs  mod.rs
src/error/: mod.rs
src/handler/: binary_collector.rs  file_collector.rs  mod.rs
src/hash/: binary_repr.rs  binary_repr_format.rs  mod.rs
src/http_client/: hyper.rs  mod.rs
