[package]
name = "file_download"
version = "0.2.0"
authors = ["pcouaillier <paul.couaillier@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#default = ["async-std"]
default = ["tokio"]
curl-static = ["curl/static-curl", "curl/static-ssl"]
tokio03 = ["async-std/tokio03"]
tokio02 = ["async-std/tokio02"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
base64 = ">=0.12"
hex = "0.4.2"
md5 = "~0.7"
chrono = ">=0.4"
curl = { version = "~0.4", features = ["http2"] }
async-std = { version = "^1.10", optional = true }
tokio = { version = "^1.1", optional = true, features = ["io-std", "io-util", "fs"] }
