[package]
name = "file_download"
version = "1.0.0"
authors = ["pcouaillier <paul.couaillier@laposte.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
curl-static = ["curl/static-curl", "curl/static-ssl"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
base64 = "~0.21.7"
hex = "0.4.2"
md5 = "~0.7"
chrono = ">=0.4"
curl = { version = "~0.4", features = ["http2"] }
async-std = { version = "^1.10", optional = true }
tokio = { version = "^1.1", optional = true, features = ["io-std", "io-util", "fs"] }
