[package]
name = "file_download"
version = "2.0.0"
authors = ["pcouaillier <paul.couaillier@laposte.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
curl-static = ["curl/static-curl", "curl/static-ssl"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
hyper = ["tokio", "tokio/full", "tokio/rt", "tokio/net", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
base64 = "~0.22.1"
hex = "0.4.2"
md5 = "~0.7"
chrono = ">=0.4"
curl = { version = "~0.4", features = ["http2"] }
async-std = { version = "^1.12", optional = true }
tokio = { version = "^1.1", optional = true, features = ["io-std", "io-util", "fs"] }
hyper = { version = "^1.2.0", optional = true, features = ["client", "http1", "http2"] }
hyper-util = { version = "^0.1.3", optional = true, features = ["client", "http1", "http2", "tokio"] }
http-body-util = { version = "^0.1.0", optional = true }
